--- a/test-output/SparkReport/Spark.html
+++ b/test-output/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 20, 2021 12:09:20 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 22, 2021 08:25:06 PM</span></a>
 </li>
 </ul>
 </div>
@@ -66,13 +66,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 20, 2021 12:09:20 PM</h3>
+<h3>Jan 22, 2021 08:25:06 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 20, 2021 12:09:45 PM</h3>
+<h3>Jan 22, 2021 08:25:34 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -143,7 +143,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>3</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>5</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Testing Ecommerce":22.913
+"Validating Contact us feature":26.142
 };
 </script>
 <div class="row">
@@ -172,7 +172,7 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@login</td>
+<td>@contact</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
@@ -217,7 +217,7 @@ warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 3,
+passGrandChild: 5,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
@@ -242,7 +242,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@login</a>
+<a class="dropdown-item" href="#">@contact</a>
 </ul>
 </li>
 </ul>
@@ -253,9 +253,9 @@ eventsCount: 5,
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Testing Ecommerce</p>
+            <p class="name">Validating Contact us feature</p>
             <p class="text-sm">
-              <span>12:09:22 PM</span> / <span>00:00:22:913</span>
+              <span>20:25:08 PM</span> / <span>00:00:26:142</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -263,10 +263,10 @@ eventsCount: 5,
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Testing Ecommerce</h5>
-<span class='badge badge-success'>01.20.2021 12:09:22</span>
-<span class='badge badge-danger'>01.20.2021 12:09:44</span>
-<span class='badge badge-default'>00:00:22:913</span>
+<h5 class="test-status text-pass">Validating Contact us feature</h5>
+<span class='badge badge-success'>01.22.2021 20:25:08</span>
+<span class='badge badge-danger'>01.22.2021 20:25:34</span>
+<span class='badge badge-default'>00:00:26:142</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 </div>
 <div class="m-t-10 m-l-5"></div>
@@ -276,23 +276,33 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Login with valid credential</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>verifying user is able to send message</div>
       </div>
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepDefinition.LoginTest.i_naviagate_to_launch_page_of_the_application()">
-                <span>Given I naviagate to launch page of the application and click on login link field</span>
+              <div class="step pass-bg" title="stepDefinition.ContactUsTest.user_is_on_contact_us_page()">
+                <span>Given user is on contact us page</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinition.LoginTest.user_enters_the_Username_and_Password_into_the_fields(java.lang.String,java.lang.String)">
-                <span>When User enters the Username riteshranjanmishra938@gmail.com and Password mishra21 into the fields</span>
+              <div class="step pass-bg" title="stepDefinition.ContactUsTest.user_choose_subject_heading()">
+                <span>And user choose subject heading</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinition.LoginTest.user_should_be_abale_to_succefully_Login()">
-                <span>Then user should be abale to succefully Login</span>
+              <div class="step pass-bg" title="stepDefinition.ContactUsTest.user_enter_required_details()">
+                <span>And user enter required details</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepDefinition.ContactUsTest.user_click_submit_button()">
+                <span>When user click submit button</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepDefinition.ContactUsTest.user_should_able_to_send_message_successfully()">
+                <span>Then user should able to send message successfully</span>
       <div>
       </div>
               </div>
@@ -324,12 +334,12 @@ eventsCount: 5,
 <span class="meta">
 <span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">@login</p>
+<p class="name">@contact</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@login</h4>
+<h4>@contact</h4>
 <span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -343,11 +353,11 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>12:09:22 PM</td>
+<td>20:25:08 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>Login with valid credential</a>
+<a href="#" class="linked" test-id='1' id='2'>verifying user is able to send message</a>
 <div class="">
-<span class="badge badge-default">Testing Ecommerce.Login with valid credential</span>
+<span class="badge badge-default">Validating Contact us feature.verifying user is able to send message</span>
 </div>
 </td>
 </tr>
