Spark Report added

--- a/test-output/SparkReport/Spark.html
+++ b/test-output/SparkReport/Spark.html
@@ -8,7 +8,7 @@
 <title>Extent</title>
 <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@b00a2d0486596e73dd7326beacf352c639623a0e/commons/img/logo.png">
 <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@b00a2d0486596e73dd7326beacf352c639623a0e/commons/img/logo.png">
-<link href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@c952cc003431b643d7a73337421ff42b75bac784/spark/css/spark-style.css" rel="stylesheet" />
+<link href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@c43b89d03a7c43dae8bb8f0f078bad1997af6b3b/spark/css/spark-style.css" rel="stylesheet" />
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="https://cdn.rawgit.com/extent-framework/extent-github-cdn/7cc78ce/spark/js/jsontree.js"></script>
 <style type="text/css"></style></head><body class="spa bdd-report dark">
@@ -32,10 +32,10 @@
 </ul>
 <ul class="nav-right">
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Automation Report</span></a>
+<a href="#"><span class="badge badge-primary">Grasshopper Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 30, 2021 07:33:02 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 30, 2021 08:35:18 PM</span></a>
 </li>
 </ul>
 </div>
@@ -66,13 +66,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 30, 2021 07:33:02 PM</h3>
+<h3>Jan 30, 2021 08:35:18 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 30, 2021 07:33:31 PM</h3>
+<h3>Jan 30, 2021 08:35:48 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -143,7 +143,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>6</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>3</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -162,17 +162,17 @@
 </div></div>
 <script>
 var timeline = {
-"SignUp for New User":26.635
+"Testing Ecommerce":27.634
 };
 </script>
 <div class="row">
-<div class="col-lg-6 col-md-12 category-container">
+<div class="col-md-4 category-container">
 <div class="card">
 <div class="card-header"><p>Tags</p></div>
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@SignUp</td>
+<td>@login</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
@@ -183,7 +183,7 @@ var timeline = {
 </table></div>
 </div>
 </div>
-<div class="col-lg-6 col-md-12 sysenv-container">
+<div class="col-md-4 sysenv-container">
 <div class="card">
 <div class="card-header"><p>System/Environment</p></div>
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
@@ -217,7 +217,7 @@ warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 6,
+passGrandChild: 3,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
@@ -242,7 +242,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@SignUp</a>
+<a class="dropdown-item" href="#">@login</a>
 </ul>
 </li>
 </ul>
@@ -253,9 +253,9 @@ eventsCount: 5,
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">SignUp for New User</p>
+            <p class="name">Testing Ecommerce</p>
             <p class="text-sm">
-              <span>19:33:04 PM</span> / <span>00:00:26:635</span>
+              <span>20:35:21 PM</span> / <span>00:00:27:634</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -263,10 +263,10 @@ eventsCount: 5,
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">SignUp for New User</h5>
-<span class='badge badge-success'>01.30.2021 19:33:04</span>
-<span class='badge badge-danger'>01.30.2021 19:33:31</span>
-<span class='badge badge-default'>00:00:26:635</span>
+<h5 class="test-status text-pass">Testing Ecommerce</h5>
+<span class='badge badge-success'>01.30.2021 20:35:21</span>
+<span class='badge badge-danger'>01.30.2021 20:35:48</span>
+<span class='badge badge-default'>00:00:27:634</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 </div>
 <div class="m-t-10 m-l-5"></div>
@@ -276,38 +276,23 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>sign up for valid credential</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Login with valid credential</div>
       </div>
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepDefinition.SignUpTest.user_navigate_application_url()">
-                <span>Given user navigate application url</span>
+              <div class="step pass-bg" title="stepDefinition.LoginTest.i_naviagate_to_launch_page_of_the_application()">
+                <span>Given I naviagate to launch page of the application and click on login link field</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinition.SignUpTest.user_enter_email_id()">
-                <span>And user enter email id</span>
+              <div class="step pass-bg" title="stepDefinition.LoginTest.user_enters_the_Username_and_Password_into_the_fields(java.lang.String,java.lang.String)">
+                <span>When User enters the Username riteshranjanmishra938@gmail.com and Password mishra21 into the fields</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinition.SignUpTest.user_enter_his_personal_information()">
-                <span>And user enter his personal information</span>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepDefinition.SignUpTest.user_enter_valid_address()">
-                <span>And user enter valid address</span>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepDefinition.SignUpTest.user_click_on_register_button()">
-                <span>When user click on register button</span>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepDefinition.SignUpTest.user_should_be_abale_to_succefully_Register()">
-                <span>Then user should be abale to succefully Register</span>
+              <div class="step pass-bg" title="stepDefinition.LoginTest.user_should_be_abale_to_succefully_Login()">
+                <span>Then user should be abale to succefully Login</span>
       <div>
       </div>
               </div>
@@ -339,12 +324,12 @@ eventsCount: 5,
 <span class="meta">
 <span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">@SignUp</p>
+<p class="name">@login</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@SignUp</h4>
+<h4>@login</h4>
 <span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -358,11 +343,11 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>19:33:04 PM</td>
+<td>20:35:21 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>sign up for valid credential</a>
+<a href="#" class="linked" test-id='1' id='2'>Login with valid credential</a>
 <div class="">
-<span class="badge badge-default">SignUp for New User.sign up for valid credential</span>
+<span class="badge badge-default">Testing Ecommerce.Login with valid credential</span>
 </div>
 </td>
 </tr>
