HashMap imlemented in LoginPage

--- a/test-output/SparkReport/Spark.html
+++ b/test-output/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Grasshopper Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 26, 2021 12:12:21 AM</span></a>
+<a href="#"><span class="badge badge-primary">Mar 26, 2021 11:20:38 PM</span></a>
 </li>
 </ul>
 </div>
@@ -66,13 +66,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 26, 2021 12:12:21 AM</h3>
+<h3>Mar 26, 2021 11:20:38 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 26, 2021 12:12:55 AM</h3>
+<h3>Mar 26, 2021 11:21:18 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"SignUp for New User":31.456
+"SignUp for New User":37.326
 };
 </script>
 <div class="row">
@@ -255,7 +255,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">SignUp for New User</p>
             <p class="text-sm">
-              <span>00:12:23 AM</span> / <span>00:00:31:456</span>
+              <span>23:20:40 PM</span> / <span>00:00:37:326</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -264,9 +264,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">SignUp for New User</h5>
-<span class='badge badge-success'>02.26.2021 00:12:23</span>
-<span class='badge badge-danger'>02.26.2021 00:12:55</span>
-<span class='badge badge-default'>00:00:31:456</span>
+<span class='badge badge-success'>03.26.2021 23:20:40</span>
+<span class='badge badge-danger'>03.26.2021 23:21:18</span>
+<span class='badge badge-default'>00:00:37:326</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 </div>
 <div class="m-t-10 m-l-5"></div>
@@ -358,7 +358,7 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>00:12:23 AM</td>
+<td>23:20:40 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>sign up for valid credential</a>
 <div class="">
